--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,15 +18,15 @@
     }
 
     // Regular
-
+console.log('hello');
     // Interpolated
-
+// with the invention of the back ticks this one is practically useless
     // Styled
 
     // warning!
-
+    console.warn("oh no!!")
     // Error :|
-
+console.error("sjoot")
     // Info
 
     // Testing
@@ -34,7 +34,7 @@
     // clearing
 
     // Viewing DOM Elements
-
+console.dir(p)
     // Grouping together
 
     // counting
